// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> with \`as\` prop matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.13rem;
  padding: 0 1.88rem;
  font-size: 0.88rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.88rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  border: 0.13rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 >:nth-child(n) {
  margin-right: 0.63rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg {
  fill: #222;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:active svg {
  fill: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0:disabled svg {
  fill: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.13rem;
  }
}

<input
  className="c0"
  type="submit"
  value="MyButton"
/>
`;

exports[`<Button /> with \`big\` prop matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.13rem;
  padding: 0 1.88rem;
  font-size: 0.88rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.88rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  min-width: 13.75rem;
  min-height: 4.38rem;
  padding: 0 2.5rem;
  font-size: 1rem;
  border: 0.13rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 >:nth-child(n) {
  margin-right: 0.63rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg {
  fill: #222;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:active svg {
  fill: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0:disabled svg {
  fill: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.13rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 13.75rem;
    height: 4.38rem;
  }
}

<button
  className="c0"
>
  MyButton
</button>
`;

exports[`<Button /> with \`borderRadius\` prop matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.13rem;
  padding: 0 1.88rem;
  font-size: 0.88rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.88rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  border-radius: 0.25rem;
  border: 0.13rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 >:nth-child(n) {
  margin-right: 0.63rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg {
  fill: #222;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:active svg {
  fill: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0:disabled svg {
  fill: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.13rem;
  }
}

<button
  className="c0"
>
  MyButton
</button>
`;

exports[`<Button /> with \`checked\` \`modifier\` prop matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.13rem;
  padding: 0 1.88rem;
  font-size: 0.88rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.88rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  border: 0.13rem solid #bae8fd;
  background-color: #fff;
  color: #19b4fa;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 >:nth-child(n) {
  margin-right: 0.63rem;
  text-align: left;
}

.c0 >:nth-last-child(2) {
  margin-right: 0;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg {
  fill: #19b4fa;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0:disabled svg {
  fill: #fff;
}

.c1 {
  width: 1.25rem;
  height: 1.25rem;
  bottom: -0.63rem;
  position: absolute;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.13rem;
  }
}

<button
  aria-checked={true}
  className="c0"
>
  MyButton
  <svg
    className="c1"
    viewBox="0 0 20 20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      Checked circle
    </title>
    <circle
      cx="10"
      cy="10"
      fill="#19b4fa"
      r="10"
    />
    <path
      d="M8.232 13.89l.707.706 5.656-5.657-1.414-1.415-4.243 4.243-2.122-2.122-1.414 1.415 2.828 2.83z"
      fill="#fff"
    />
  </svg>
</button>
`;

exports[`<Button /> with \`fluid\` prop matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.13rem;
  padding: 0 1.88rem;
  font-size: 0.88rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.88rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  min-width: initial;
  width: 100%;
  border: 0.13rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 >:nth-child(n) {
  margin-right: 0.63rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg {
  fill: #222;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:active svg {
  fill: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0:disabled svg {
  fill: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.13rem;
  }
}

<button
  className="c0"
>
  MyButton
</button>
`;

exports[`<Button /> with \`oxygen\` \`modifier\` prop matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.13rem;
  padding: 0 1.88rem;
  font-size: 0.88rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.88rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  border: 0.13rem dashed #bae8fd;
  background-color: #fff;
  color: #19b4fa;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 >:nth-child(n) {
  margin-right: 0.63rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg {
  fill: #19b4fa;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:active svg {
  fill: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0:disabled svg {
  fill: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.13rem;
  }
}

<button
  className="c0"
>
  MyButton
</button>
`;

exports[`<Button /> with \`tiny\` prop matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.13rem;
  padding: 0 1.88rem;
  font-size: 0.88rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.88rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  min-width: 10rem;
  min-height: 2.5rem;
  padding: 0 1.25rem;
  font-size: 0.88rem;
  border: 0.13rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 >:nth-child(n) {
  margin-right: 0.63rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg {
  fill: #222;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:active svg {
  fill: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0:disabled svg {
  fill: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.13rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 10rem;
    height: 2.5rem;
  }
}

<button
  className="c0"
>
  MyButton
</button>
`;

exports[`<Button /> with icon matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.13rem;
  padding: 0 1.88rem;
  font-size: 0.88rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.88rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  min-width: initial;
  min-height: initial;
  width: 3.13rem;
  height: 3.13rem;
  padding: 0;
  border: 0.13rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 >:nth-child(n) {
  margin-right: 0.63rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg {
  fill: #222;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:active svg {
  fill: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0:disabled svg {
  fill: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.13rem;
  }
}

<button
  className="c0"
>
  !
</button>
`;

exports[`<Button /> with some elements matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.13rem;
  padding: 0 1.88rem;
  font-size: 0.88rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.88rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  border: 0.13rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 >:nth-child(n) {
  margin-right: 0.63rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg {
  fill: #222;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:active svg {
  fill: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0:disabled svg {
  fill: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.13rem;
  }
}

<button
  className="c0"
>
  <span>
    My
  </span>
  <span>
    Button
  </span>
</button>
`;

exports[`<Button /> with text matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.13rem;
  padding: 0 1.88rem;
  font-size: 0.88rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.88rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  border: 0.13rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 >:nth-child(n) {
  margin-right: 0.63rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg {
  fill: #222;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:active svg {
  fill: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0:disabled svg {
  fill: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.13rem;
  }
}

<button
  className="c0"
>
  MyButton
</button>
`;
